@startuml

abstract class Pizza{
    - String name;
    + String getName()
    + abstract void prepare();
    + void bake()
    + void cute()
    + void box()
    + String toString()
}

together {
    class ChinaMilkPizza{
        + void prepare()
    }
    class ChinaCheesePizza{
        + void prepare()
    }
    class JapanMilkPizza{
        + void prepare()
    }
    class JapanCheesePizza{
        + void prepare()
    }
}

together {
    class ChinaPizzaFactory{
         # Pizza createPizza(String orderType)
    }
    class JapanPizzaFactory{
         # Pizza createPizza(String orderType)
    }
}

interface PizzaFactory {
    Pizza createPizza(String orderType);
}

class OrderService {
    - PizzaFactory pizzaFactory;
    + void setPizzaFactory(PizzaFactory pizzaFactory)
    + void order()
}

Pizza <|-- ChinaMilkPizza
Pizza <|-- ChinaCheesePizza
Pizza <|-- JapanMilkPizza
Pizza <|-- JapanCheesePizzao
ChinaMilkPizza <|-- ChinaPizzaFactory
ChinaCheesePizza <|-- ChinaPizzaFactory
JapanMilkPizza <|-- JapanPizzaFactory
JapanCheesePizza <|-- JapanPizzaFactory
PizzaFactory <|-- ChinaPizzaFactory
PizzaFactory <|-- JapanPizzaFactory
PizzaFactory - OrderService

@enduml